@@ -28,6 +28,7 @@ WriteMakefile(
         'ExtUtils::MakeMaker' => 0,
     },
     BUILD_REQUIRES => {
+        'Mock::Sub'  => 0,
         'Test::More' => 0,
     },
     PREREQ_PM => {
